# ChangeLog for app-arch/bzip2
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/bzip2/ChangeLog,v 1.43 2006/07/01 17:33:09 kanaka Exp $

  01 Jul 2006; Joel Martin <kanaka@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Make install phase idempotent by moving files in .../bin instead of
  directory itself.

  28 Apr 2006; Joshua Kinard <kumba@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Marked stable on mips.

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Add ~x86-fbsd keyword.

  20 Mar 2006; Torsten Veller <tove@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Stable on x86

  20 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Stable on sparc wrt #126891

  20 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Make also bzip2recover respect LDFLAGS.

  20 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Stable on alpha wrt bug #126891. Tested by Thomas Cort <tcort@cs.ubishops.ca>

  20 Mar 2006; Markus Rothe <corsair@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Stable on ppc64; bug #126891

  20 Mar 2006; Luca Barbato <lu_zero@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Marked ppc

  20 Mar 2006; Luis Medinas <metalgod@gentoo.org> bzip2-1.0.3-r6.ebuild:
  Stable on amd64. Bug #126891.

*bzip2-1.0.3-r6 (06 Feb 2006)

  06 Feb 2006; Mike Frysinger <vapier@gentoo.org>
  +files/bzip2-1.0.2-bzgrep.patch, +bzip2-1.0.3-r6.ebuild:
  Grab patch from Fedora for CAN-2005-0758.

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org> bzip2-1.0.3-r5.ebuild:
  Mark 1.0.3-r5 stable on alpha

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> bzip2-1.0.3-r5.ebuild:
  Stable on ppc64

  21 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> bzip2-1.0.3-r5.ebuild:
  Stable on mips.

  19 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> bzip2-1.0.3-r5.ebuild:
  Stable on ppc.

  16 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> bzip2-1.0.3-r5.ebuild:
  Stable on sparc
