@@ -39,19 +39,18 @@ MD5 613ebf0fa8c5fd2ed2973ffe0d727e2a files/bzip2-1.0.3-shared-largefile-support.
 RMD160 b8720c32af7133135bc81ef3e9b1b906ef6b6d44 files/bzip2-1.0.3-shared-largefile-support.patch 404
 SHA256 a253e534237980430bd5a5eb2d6f142c0b6ec2be644bc827126548a479dcfd85 files/bzip2-1.0.3-shared-largefile-support.patch 404
 DIST bzip2-1.0.3.tar.gz 669075 RMD160 7ac2a122c254d1fcd54ca8af96a1814e9e245a1a SHA1 7e749510f65c86fbfff37b97144a02f1b8b8617f SHA256 4aaa8e7b4ecf03d91c33e8bf92d489533fa6c1f99e825c34058003f18eb68c13
-EBUILD bzip2-1.0.3-r6.ebuild 2671 RMD160 808c7345873ac81613b1562512cf5b44e99674a1 SHA1 2f342bd94d1fb854a3f1264b5ee27df103c98327 SHA256 5ad0aef4711b50b48bbb07ab2b3eef541bcd4261a6375cc2f59d7cfa963ad9cc
-MD5 73cbea404806687dac354d190f0d520d bzip2-1.0.3-r6.ebuild 2671
-RMD160 808c7345873ac81613b1562512cf5b44e99674a1 bzip2-1.0.3-r6.ebuild 2671
-SHA256 5ad0aef4711b50b48bbb07ab2b3eef541bcd4261a6375cc2f59d7cfa963ad9cc bzip2-1.0.3-r6.ebuild 2671
-MISC ChangeLog 8461 RMD160 3ec69ae79791ebe5577cbd5ff4eb19571a9eb5b2 SHA1 630c24f529f0daefc2e21183048420b3f89cca07 SHA256 2bf647d2d4cbc4f5ede4c9296095943ed8b8d6f9570d217255d09be9f39da5b9
-MD5 ce7ab9c5207e7d751d1cf653d86e1457 ChangeLog 8461
-RMD160 3ec69ae79791ebe5577cbd5ff4eb19571a9eb5b2 ChangeLog 8461
-SHA256 2bf647d2d4cbc4f5ede4c9296095943ed8b8d6f9570d217255d09be9f39da5b9 ChangeLog 8461
+EBUILD bzip2-1.0.3-r6.ebuild 2706 RMD160 06dbae2076096fecb15039833b34989aab1f5a66 SHA1 cf648c21aab5fbef4c87a143b36789ebe2b63ad8 SHA256 b2623d0aedb65f430c2fcdf811c7ecee19a2d7eb6f5c2a9e7b4eae7967dd6f7c
+MD5 4c5a64fd48a031cb5020816bca5f2550 bzip2-1.0.3-r6.ebuild 2706
+RMD160 06dbae2076096fecb15039833b34989aab1f5a66 bzip2-1.0.3-r6.ebuild 2706
+SHA256 b2623d0aedb65f430c2fcdf811c7ecee19a2d7eb6f5c2a9e7b4eae7967dd6f7c bzip2-1.0.3-r6.ebuild 2706
+MISC ChangeLog 8565 RMD160 b6cbbbe96f82d2738132bb244e43d523fa1ab413 SHA1 c15d87bad38af179d00b6de9cc02a5ad1ab6ce01 SHA256 64fea6ee334ac213d6056e5293b740df52e99c2a50d0480111cf6eff4b895bcd
+MD5 1b7b6caf99cc434ea6db5c8200987b9b ChangeLog 8565
+RMD160 b6cbbbe96f82d2738132bb244e43d523fa1ab413 ChangeLog 8565
+SHA256 64fea6ee334ac213d6056e5293b740df52e99c2a50d0480111cf6eff4b895bcd ChangeLog 8565
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-size 235 files/digest-bzip2-1.0.3-r6 235
+MD5 22697ba9a4a75c2f675d528a5e3c4604 files/digest-bzip2-1.0.3-r6 235
 RMD160 65663f650ee924ec32e9a25930e8c6e46c6ddaca files/digest-bzip2-1.0.3-r6 235
 SHA256 6382eb176f58def89afcb6a2df6ef92d99ecf768602dec13b3f93da5e92a2559 files/digest-bzip2-1.0.3-r6 235
-MD5 22697ba9a4a75c2f675d528a5e3c4604 files/digest-bzip2-1.0.3-r6 235
